Istio/config/customer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-service-v1
  labels:
    app: customer-service-v1    
    version: "1.0"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: customer-service-v1
  template:
    metadata:
      labels:
        app: customer-service-v1
        version: "1.0"
    spec:
      containers:
      - name: customer-service-v1
        image: hustchihieu/customer-service:v1
        ports:
        - containerPort: 3001
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi

---
apiVersion: v1
kind: Service
metadata:
  name: customer-service-v1
spec:
  type: ClusterIP
  selector:
    app: customer-service-v1
  ports:
  - name: http
    port: 3001
    targetPort: 3001

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-service-v2
  labels:
    app: customer-service-v2
    version: "2.0"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: customer-service-v2
  template:
    metadata:
      labels:
        app: customer-service-v2
        version: "2.0"
    spec:
      containers:
      - name: customer-service-v2
        image: hustchihieu/customer-service:v2
        ports:
        - containerPort: 3001
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi

---
apiVersion: v1
kind: Service
metadata:
  name: customer-service-v2
spec:
  type: ClusterIP
  selector:
    app: customer-service-v2
  ports:
  - name: http
    port: 3001
    targetPort: 3001

---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: customer-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
    app: istio-ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: my-destination-rule
spec:
  host: "customer-service-v1"
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
  subsets:
  - name: v1
    labels:
      version: '1.0'
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
  
  - name: v2
    labels:
      version: '2.0'
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customer-service
spec:
  hosts:
  - "*"
  gateways:
  - customer-gateway

  http:
  - name: virtual-service-routes
    route:
    - destination:
        host: customer-service-v1
        subset: "v1"
      weight: 100

    # - destination:
    #     host: customer-service-v2
    #     subset: "v2"
    #   weight: 0




# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: DestinationRule
# metadata:
#   name: my-destination-rule2
# spec:
#   host: customer.test
#   # trafficPolicy:
#   #   loadBalancer:
#   #     simple: RANDOM
#   subsets:
#   - name: customer-service-v2-subset
#     labels:
#       app: customer-service-v2
#     trafficPolicy:
#       loadBalancer:
#         simple: ROUND_ROBIN


# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: product-service
#   labels:
#     app: product-service
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: product-service
#   template:
#     metadata:
#       labels:
#         app: product-service
#     spec:
#       containers:
#       - name: product-service
#         image: hustchihieu/product-service:latest
#         ports:
#         - containerPort: 3002
#         resources:
#           requests:
#             cpu: 100m
#             memory: 64Mi
#           limits:
#             cpu: 200m
#             memory: 128Mi

# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: product-service
# spec:
#   type: ClusterIP
#   selector:
#     app: product-service
#   ports:
#   - name: product-service
#     port: 3002
#     targetPort: 3002
